--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,5 +4,6 @@
 
 <%= f.text_field :title %>
 <%= f.text_area :content %>
+ <%= f.hidden_field :user_id, :value => @current_user.id %>
 <%= f.submit %>
 <% end %>
