adding minimal style

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<p>Welcome, <%= @user.fname %> <%= @user.lname %></p>
+<h1>Welcome, <%= @user.fname %> <%= @user.lname %></h1>
 
 <% @posts.each do |p| %>
 <h2><%= p.title %></h2>
