--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -1,3 +1,32 @@
 .navbar {
-    background-color: black;
+    height: 50px;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgb(0, 168, 65);
+}
+
+li {
+    float: left;
+    border-right: 1px solid rgb(255, 255, 255);
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+    background-color: rgb(0, 150, 50);
+}
+li:last-child {
+    border-right: none;
+    float: right;
 }
