--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,12 @@
 <body>
    
       <nav class='navbar'>
-        <li><a href='/'>Home</a></li> 
-        <li><a href=''>Posts</a></li>
-        <li><a href=''>All users</a></li>
-        <li><a href=''>Edit Account</a></li>
+        <ul>
+          <li><a class="navbar__link" href='/'>Home</a></li> 
+          <li><a class="navbar__link" href=''>Posts</a></li>
+          <li><a class="navbar__link" href=''>All users</a></li>
+          <li><a class="navbar__link" href=''>Edit Account</a></li>
+        </ul>
       </nav>
        
      
