--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,4 @@
 <% @posts.each do |p|%>
-<%= p.title %> <%= p.content%>
+<a href="/posts/<%= p.id %>"><h1><%= p.title %></h1></a>
+<p><%= p.content%></p>
 <% end %>
