--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,4 +3,19 @@
 
 <%= @post.content %>
 
-<a href="/posts/<%= @post.id %>/edit"><button class="button">Edit</button>
+<a href="/posts/<%= @post.id %>/edit"><button class="button">Edit</button></a>
+<h2>Comments</h2>
+<% @comments.each do |c| %>
+<p><%= c.content %></p>
+<% end %>
+
+
+<div class="commentBox">
+    <%= form_for @comment, :url => "/posts/#{@post.id}/comments" do |f| %>
+    <%= f.text_area :content %>
+    <%= f.hidden_field :post_id, :value => @post.id %>
+    <%= f.hidden_field :user_id, :value => @current_user.id %>
+    <%= submit_tag("Comment") %>
+<% end %>
+</div>
+
