--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -1,6 +1,14 @@
 .navbar {
     height: 50px;
 }
+.navbar__icon {
+    background-image: url("settings.png");
+    background-size: 100%;
+    width: 50px;
+    background-repeat: no-repeat;
+    height: 50px;
+    
+}
 ul {
     list-style-type: none;
     margin: 0;
@@ -22,10 +30,10 @@ li a {
     text-decoration: none;
 }
 
-/* Change the link color to #111 (black) on hover */
-li a:hover {
-    background-color: rgb(0, 150, 50);
-}
+// /* Change the link color to #111 (black) on hover */
+// li a:hover {
+//     background-color: rgb(0, 150, 50);
+// }
 li:last-child {
     border-right: none;
     float: right;
