--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,8 @@
 <% @posts.each do |p|%>
+<div class="post">
+<div class="post__title">
 <a href="/posts/<%= p.id %>"><h1><%= p.title %></h1></a>
+</div>
 <p><%= p.content%></p>
+</div>
 <% end %>
