--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,21 +1,26 @@
+<div class="post">
+<div class="post__title">
 <h1><%= @post.title%></h1>
-
-
+</div>
 <%= @post.content %>
-
+<br />
 <a href="/posts/<%= @post.id %>/edit"><button class="button">Edit</button></a>
-<h2>Comments</h2>
-<% @comments.each do |c| %>
-<p><%= c.content %></p>
-<% end %>
-
-
+</div>
 <div class="commentBox">
     <%= form_for @comment, :url => "/posts/#{@post.id}/comments" do |f| %>
     <%= f.text_area :content %>
     <%= f.hidden_field :post_id, :value => @post.id %>
     <%= f.hidden_field :user_id, :value => @current_user.id %>
+    <br />
     <%= submit_tag("Comment") %>
 <% end %>
 </div>
+<h2>Comments <span class="commentsButton">\/</span></h2>
+<ul class="comments">
+<% @comments.each do |c| %>
+<li>
+<p><%= c.content %></p>
+</li>
+<% end %>
+
 
