--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,8 @@
 <h1>All users</h1>
 
 <% @users.each do |u| %>
-
+<div class="user">
 <a href="/users/<%= u.id %>"><%= u.fname %></a> <br />
 <%= u.lname %> <br />
+</div>
 <% end %>
