--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,11 @@
 <body>
    
       <nav class='navbar'>
-        <ul>
-          <li><a class="navbar__link" href='/'>Home</a></li> 
-          <li><a class="navbar__link" href='/posts'>Posts</a></li>
-          <li><a class="navbar__link" href='/users'>All users</a></li>
-          <li><div class="navbar__icon"><%= link_to '', "/users/#{session[:user_id]}/edit", {method: 'get'} %></div></li>
+        <ul class="navbar__list">
+          <li class="navbar__item"><a class="navbar__link" href='/'>Home</a></li> 
+          <li class="navbar__item"><a class="navbar__link" href='/posts'>Posts</a></li>
+          <li class="navbar__item"><a class="navbar__link" href='/users'>All users</a></li>
+          <li class="navbar__item"><div class="navbar__icon"><%= link_to '', "/users/#{session[:user_id]}/edit", {method: 'get'} %></div></li>
         </ul>
       </nav>
        
