--- a/app/assets/stylesheets/_comments.scss
+++ b/app/assets/stylesheets/_comments.scss
@@ -3,3 +3,14 @@
     margin-top: 50px;
     text-align:center;
 }
+.commentsBox {
+    text-align: center;
+    border: 2px solid red;
+}
+.commentsList {
+    border: 2px solid;
+    list-style: none;
+}
+.commentsItem {
+    background-color: rgb(0, 168, 65);
+}
