--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -9,7 +9,7 @@
     height: 50px;
     
 }
-ul {
+.navbar__list {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -17,7 +17,7 @@ ul {
     background-color: rgb(0, 168, 65);
 }
 
-li {
+.navbar__item {
     float: left;
     border-right: 1px solid rgb(255, 255, 255);
 }
@@ -34,7 +34,7 @@ li a {
 // li a:hover {
 //     background-color: rgb(0, 150, 50);
 // }
-li:last-child {
+.navbar__item:last-child {
     border-right: none;
     float: right;
 }
