--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,7 +19,7 @@
 
 <div class="commentsBox">
 
-<h2>Comments <span class="commentsButton">\/</span></h2>
+<h2>Comments <span class="commentsButton">&darr;</span></h2>
 
 <ul class="commentsList">
 
@@ -29,5 +29,5 @@
 
 </ul>
 </div>
-<%= javascript_include_tag('comments.js') %>
+
 
