--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -10,7 +10,7 @@
     margin-top: 50px;
     text-align: center;
     background-color: rgb(0, 168, 65);
-    border-radius: 5%;
+    // border-radius: 5%;
 }
 .loginBox__title {
     position: relative;
@@ -28,12 +28,12 @@
     margin-top: 50px;
     text-align: center;
     background-color: rgb(0, 168, 65);
-    border-radius: 5%;
+    // border-radius: 5%;
 }
 .post__title {
     position: relative;
     top: -50px;
-    font-size: 2em;
+    font-size: 1em;
     padding-bottom: 20px;
     color: white;
     text-decoration: none;
@@ -55,6 +55,5 @@
     margin-top: 50px;
     text-align: center;
     background-color: rgb(0, 168, 65);
-    border-radius: 5%;
+    // border-radius: 5%;
 }
-
