--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,7 +22,7 @@
 
 <div class="commentsBox">
 
-<h2>Comments <span class="commentsButton">&darr;</span></h2>
+<h2 class="commentsButton">Comments <span>&darr;</span></h2>
 
 <ul class="commentsList">
 
